# halo

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  README_zh.md  boot-review-codex-20260326-091700.md  cronctl.yaml  docs-audit.py  docs-migrate.py  justfile  logctl.yaml  memctl.yaml  pyproject.toml  todoctl.yaml  watchctl.yaml
.claude/agents/: agent-organizer.md  claude-md-mirror.md  debugger.md  documentation-expert.md  listen-drive-and-steer-system-prompt.md  review-implementer.md  test-automator.md
.claude/commands/: listen-drive-and-steer-user-prompt.md  review.md  walkthrough-add.md
.claude/evals/: behavioral-smoke-adversarial-review-v3.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md
agent/: justfile
container/: Dockerfile
docker/: entrypoint.sh
docs/: README.md  REQUIREMENTS.md  ai-engineering-patterns.md
docs/d1/: INDEX.md  (+14 more)
gateway/: MIGRATION-CUTOVER.md  README.md  README_zh.md  package-lock.json  package.json
halfleet/: ecosystem.config.js  fleet-config.yaml
halos/: README.md  __init__.py
infra/: README.md
jobctl/: pyproject.toml
launchd/: com.nanoclaw.plist
memory/: INDEX.md
queue/: MANIFEST.yaml
rubrics/: watchctl-triage.yaml
setup/: environment.test.ts  register.test.ts
src/: config.ts  container-runner.test.ts  container-runner.ts  credential-proxy.test.ts  credential-proxy.ts  db.test.ts  db.ts  env.ts  index.ts  ipc-auth.test.ts
tests/: test_changoctl_cli.py  test_changoctl_flavour.py  test_changoctl_graph.py  test_changoctl_store.py  test_docctl.py  test_e2e_gauntlet.py  test_journalctl.py
(+488 files in other folders)
