[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "halos"
version = "0.1.0"
description = "HAL agent operating system - CLI tools for memory, jobs, cron, and backlog"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0"]

[project.scripts]
memctl = "halos.memctl.cli:main"
nightctl = "halos.nightctl.cli:main"
cronctl = "halos.cronctl.cli:main"
todoctl = "halos.todoctl.cli:main"
